# stocks_analyzer

./: README.md  pyproject.toml
nasdaq_fetch/: README.md  Utilities.py  __init__.py  cli.py  nasdaq_client.py  nasdaq_fetch.py  storage.py
nasdaq_fetch/data/: top50.csv  top50.json
