[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nasdaq-stocks"
version = "0.1.0"
description = "CLI tool to download stock data from Nasdaq and save locally."
authors = [{ name = "Rachel Steinitz Eliyahu", email = "rachelitaste@google.com" }]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
nasdaq-stocks = "nasdaq_fetch.cli:main"
